frontend/src/container/ListOfDashboard/DashboardList.styles.scss
/* ... */
.new-dashboard-menu {
	width: 200px;

	.create-dashboard-menu-item {
		display: flex;
		align-items: center;
		gap: 8px;
	}
}

.delete-view-modal {
	width: calc(100% - 30px) !important; /* Adjust the 20px as needed */
	max-width: 384px;
	.ant-modal-content {
		padding: 0;
		border-radius: 4px;
		border: 1px solid var(--l1-border);
		background: var(--l2-background);
		box-shadow: 0px -4px 16px 2px rgba(0, 0, 0, 0.2);

		.ant-modal-header {
			padding: 16px;
			background: var(--l2-background);
		}

		.ant-modal-body {
			padding: 0px 16px 28px 16px;

			.ant-typography {
				color: var(--l2-foreground);
				font-size: var(--font-size-sm);
				font-style: normal;
				font-weight: var(--font-weight-normal);
				line-height: 20px;
				letter-spacing: -0.07px;
			}

			.save-view-input {
				margin-top: 8px;
				display: flex;
				gap: 8px;
			}

			.ant-color-picker-trigger {
				padding: 6px;
				border-radius: 2px;
				border: 1px solid var(--l1-border);
				background: var(--l3-background);
				width: 32px;
				height: 32px;

				.ant-color-picker-color-block {
					border-radius: 50px;
					width: 16px;
					height: 16px;
					flex-shrink: 0;

					.ant-color-picker-color-block-inner {
						display: flex;
						justify-content: center;
						align-items: center;
					}
				}
			}
		}

		.ant-modal-footer {
			display: flex;
			justify-content: flex-end;
			padding: 16px 16px;
			margin: 0;

			.cancel-btn {
				display: flex;
				align-items: center;
				border: none;
				border-radius: 2px;
				background: var(--l1-border);
			}

			.delete-btn {
				display: flex;
				align-items: center;
				border: none;
				border-radius: 2px;
				background: var(--danger-background);
				margin-left: 12px;
			}

			.delete-btn:hover {
				color: var(--l1-foreground);
				background: var(--bg-cherry-600);
			}
		}
	}
	.title {
		color: var(--l1-foreground);
		font-size: var(--font-size-sm);
		font-style: normal;
		font-weight: var(--font-weight-medium);
		line-height: 20px; /* 142.857% */
	}
}

.dashboard-actions {
	.ant-popover-inner {
		width: 187px;
		height: auto;
		flex-shrink: 0;
		border-radius: 4px;
		border: 1px solid var(--l1-border);
		background: linear-gradient(
			139deg,
			color-mix(in srgb, var(--card) 80%, transparent) 0%,
			color-mix(in srgb, var(--card) 90%, transparent) 98.68%
		);
		box-shadow: 4px 10px 16px 2px rgba(0, 0, 0, 0.2);
		backdrop-filter: blur(20px);
		padding: 0px;

		.dashboard-action-content {
			.section-1 {
				display: flex;
				flex-direction: column;

				.action-btn {
					display: flex;
					padding: 8px;
					height: unset;
					align-items: center;
					gap: 6px;
					color: var(--l2-foreground);
					font-family: Inter;
					font-size: 12px;
					font-style: normal;
					font-weight: 400;
					line-height: normal;
					letter-spacing: 0.14px;

					.ant-icon-btn {
						margin-inline-end: 0px;
					}
				}
			}

			.section-2 {
				display: flex;
				flex-direction: column;
				border-top: 1px solid var(--l1-border);

				.ant-typography {
					display: flex;
					padding: 12px 8px;
					align-items: center;
					gap: 6px;
					color: var(--bg-cherry-400) !important;
					font-family: Inter;
					font-size: 12px;
					font-style: normal;
					font-weight: 400;
					line-height: normal;
					letter-spacing: 0.14px;
				}
			}
		}
	}
}

.sort-dashboards {
	.ant-popover-inner {
		display: flex;
		padding: 0px;
		align-items: center;
		border-radius: 4px;
		border: 1px solid var(--l1-border);
		background: linear-gradient(
			139deg,
			color-mix(in srgb, var(--card) 80%, transparent) 0%,
			color-mix(in srgb, var(--card) 90%, transparent) 98.68%
		);
		box-shadow: 4px 10px 16px 2px rgba(0, 0, 0, 0.2);
		backdrop-filter: blur(20px);
		gap: 16px;

		.sort-content {
			display: flex;
			flex-direction: column;
			align-items: flex-start;
			width: 140px;

			.sort-heading {
				color: var(--l3-foreground);
				font-family: Inter;
				font-size: 11px;
				font-style: normal;
				font-weight: 600;
				line-height: 18px; /* 163.636% */
				letter-spacing: 0.88px;
				text-transform: uppercase;
				padding: 12px 18px 6px 14px;
			}

			.sort-btns {
				text-align: start;
				display: flex;
				justify-content: space-between;
				align-items: center;
				width: 100%;
				color: var(--l2-foreground);
				font-family: Inter;
				font-size: 14px;
				font-style: normal;
				font-weight: 400;
				line-height: normal;
				letter-spacing: 0.14px;
				padding: 12px 18px 12px 14px;
				height: auto;
			}
		}
	}
}

.configure-group {
	.ant-popover-inner {
		display: flex;
		align-items: center;
		border-radius: 4px;
		padding: 0px;
		border: 1px solid var(--l1-border);
		background: linear-gradient(
			139deg,
			color-mix(in srgb, var(--card) 80%, transparent) 0%,
			color-mix(in srgb, var(--card) 90%, transparent) 98.68%
		);
		box-shadow: 4px 10px 16px 2px rgba(0, 0, 0, 0.2);
		backdrop-filter: blur(20px);
		gap: 16px;
		.configure-content {
			display: flex;
			flex-direction: column;
			align-items: flex-start;
			.configure-btn {
				display: flex;
				text-align: start;
				align-items: center;
				width: 100%;
				color: var(--l2-foreground);
				font-family: Inter;
				font-size: 14px;
				font-style: normal;
				font-weight: 400;
				line-height: normal;
				letter-spacing: 0.14px;
				padding: 12px;
			}
		}
	}
}
/* ... */

